// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders a background image when avatarUrl is supplied 1`] = `
<ForwardRef(Box)
  className="avatar size-xl"
  style={
    Object {
      "backgroundImage": "url(https://foo.bar/com.png)",
      "textIndent": "-9999px",
    }
  }
>
  HM
</ForwardRef(Box)>
`;

exports[`Avatar renders initials of user email when avatarUrl is not supplied 1`] = `
<ForwardRef(Box)
  className="avatar size-xl"
  style={
    Object {
      "backgroundColor": "#98be2f",
    }
  }
>
  H
</ForwardRef(Box)>
`;

exports[`Avatar renders initials of user name when avatarUrl is not supplied 1`] = `
<ForwardRef(Box)
  className="avatar size-xl"
  style={
    Object {
      "backgroundColor": "#98be2f",
    }
  }
>
  HM
</ForwardRef(Box)>
`;

exports[`Avatar renders initials on custom color 1`] = `
<ForwardRef(Box)
  className="avatar size-xl"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  HM
</ForwardRef(Box)>
`;
